# api/docs/swagger.json
@@ -1926,8 +1926,7 @@
                         "type": "string",
                         "description": "promo_code",
                         "name": "promo_code",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -2704,7 +2703,7 @@
                 "operationId": "create_promoCode",
                 "parameters": [
                     {
-                        "description": "CreatePromoCodeRequest",
+                        "description": "DiscountType must be fixed or percent",
                         "name": "promoCode",
                         "in": "body",
                         "required": true,
@@ -3052,7 +3051,7 @@
                     "TotalSelledStaff"
                 ],
                 "summary": "total_selled_staff",
-                "operationId": "get_by_id_staff",
+                "operationId": "get_by_id_staffsellet",
                 "parameters": [
                     {
                         "type": "string",
